updated an issue with the About me spacing and added to readme

--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -31,7 +31,7 @@
 
 a,
 a:visited {
-  color: tomato;
+  color: black;
 }
 
 #me {
